# lisp-sandbox

./: .editorconfig  .gitignore  README.md
emacs/: README.org  init.el
emacs-lisp/: .dir-locals.el  basic-calculator-tests.el  basic-calculator.el  binary-search-tests.el  binary-search-tree-tests.el  binary-search-tree.el  binary-search.el  circular-deque-tests.el  circular-deque.el  count-words.el  doubly-linked-list-tests.el  doubly-linked-list.el  graph-test.el  graph.el  hash-map-tests.el  hash-map.el  lru-cache-tests.el  lru-cache.el  merge-sort.el  method-dispatch.el  priority-queue-tests.el  priority-queue.el  reverse-list.el  sort.el  stack-tests.el  stack.el  test-utils.el  words-in-a-defun.el
hello-c/: .gitignore  Makefile  average.c  binary_search.c  binary_tree.c  calc.c  calculator.c  cat.c  command_args.c  constructor_pattern.c  count_keywords.c  cp.c  find.c  fsize.c  function_pointer.c  getch.c  getint.c  getint.txt  getop.c  getopt.c  getopt.h  hash_table.c  longest_line.c  minprintf.c  net_client.c  net_server.c  print_string.c  remove_duplicates.c  sort.c  sort_lines.c  sort_lines.txt  sort_numbers.txt  stack.c  threads.c  widget_constructor.c
hello-clojure/: CHANGELOG.md  README.md
hello-rust/: Cargo.toml
hello-rust/src/: main.rs
polars-py/: README.md  hello-polars.py  pyproject.toml
polars-py/data/: legislators-historical.csv
sicp-rkt/: count-change.rkt  hello.rkt  interval-arithmetic.rkt  list-ops.rkt  prime.rkt  queue.rkt  rational-number.rkt  set-ops.rkt  stream.rkt  table.rkt
