[tool.poetry]
name = "polars-py"
version = "0.1.0"
description = ""
authors = ["Jerry <zhangji87@gmail.com>"]
readme = "README.md"
packages = [{include = "polars_py"}]

[tool.poetry.dependencies]
python = "^3.10"
polars = {extras = ["numpy"], version = "^1.13.0"}


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"

[[tool.poetry.source]]
name = "aliyun"
url = "https://mirrors.aliyun.com/pypi/simple/"
